@@ -18,7 +18,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -39,9 +38,35 @@ public class SecurityConfig {
             // Cấu hình quyền truy cập cho mọi yêu cầu
             .authorizeHttpRequests(authz -> authz
                 // Cho phép truy cập không cần xác thực cho các API công khai
-                .requestMatchers("/api/auth/login", "/api/auth/register", "/api/auth/verify-email",
-                               "/api/auth/resend-verification-email", "/swagger-ui/**",
-                               "/swagger-ui.html", "/api-docs/**", "/api/test/token-info").permitAll()
+                .requestMatchers(
+                    "/api/auth/login",
+                    "/api/auth/register",
+                    "/api/auth/verify-email",
+                    "/api/auth/resend-verification-email",
+                    "/api/users/forgot-password",  // Thêm endpoint forgot password
+                    "/api/users/reset-password",   // Thêm endpoint reset password
+                    "/swagger-ui/**",
+                    "/swagger-ui.html",
+                    "/v3/api-docs/**",
+                    "/api-docs/**",
+                    "/api/test/token-info",
+                    "/api/payment/packages",
+                    "/api/payment-debug/**",
+                    "/api/payment/vnpay-return",
+                    "/api/cors-test/**",
+                    "/test/**",
+                    "/static/**",
+                    "/css/**",
+                    "/js/**",
+                    "/images/**",
+                    "/*.html",
+                    "/favicon.ico",
+                    "/error",
+                    "/actuator/health",
+                    "/",
+                    "/index.html",
+                    "/webjars/**"
+                ).permitAll()
                 // Bắt buộc xác thực cho tất cả các request khác
                 .anyRequest().authenticated()
             )
@@ -65,11 +90,24 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(false);
+
+        // Cho phép tất cả origins - bao gồm cả ngrok và localhost
+        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+
+        // Thêm tất cả các HTTP methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+
+        // Cho phép tất cả headers
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        // Expose các headers cần thiết
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Total-Count"));
+
+        // Cho phép credentials
+        configuration.setAllowCredentials(true);
+
+        // Cache preflight request trong 1 giờ
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
